--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Početna</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
@@ -44,7 +44,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html">O autoru</a>
             </li>
           </ul>
         </div>
@@ -83,6 +83,10 @@
           <img src="img/image1.jpg" class="d-block w-100" alt="Destination 1" />
           <div class="carousel-caption">
             <h1>Zaronite u Nezaboravna Putovanja</h1>
+            <p>
+              Dobrodošli na našu platformu putovanja! Inspirišemo avanture širom
+              sveta. Vaša sledeća destinacija je samo klik dalje.
+            </p>
             <p><a href="#" class="btn btn-warning mt3">Saznajte više</a></p>
           </div>
         </div>
@@ -90,6 +94,10 @@
           <img src="img/france.jpg" class="d-block w-100" alt="Louvre" />
           <div class="carousel-caption">
             <h1>Zaronite u Nezaboravna Putovanja</h1>
+            <p>
+              Dobrodošli na našu platformu putovanja! Inspirišemo avanture širom
+              sveta. Vaša sledeća destinacija je samo klik dalje.
+            </p>
             <p><a href="#" class="btn btn-warning mt3">Saznajte više</a></p>
           </div>
         </div>
@@ -101,6 +109,10 @@
           />
           <div class="carousel-caption">
             <h1>Zaronite u Nezaboravna Putovanja</h1>
+            <p>
+              Dobrodošli na našu platformu putovanja! Inspirišemo avanture širom
+              sveta. Vaša sledeća destinacija je samo klik dalje.
+            </p>
             <p><a href="#" class="btn btn-warning mt3">Saznajte više</a></p>
           </div>
         </div>
@@ -124,6 +136,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
