--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/4cd4ec0763.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <title>Document</title>
+    <title>JourneyJoy</title>
   </head>
   <body>
+    <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"
@@ -32,9 +37,6 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Početna</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
@@ -44,13 +46,16 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">O autoru</a>
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">Author</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
+    <!-- Carousel-->
     <div
       id="carouselExampleCaptions"
       class="carousel slide"
@@ -82,38 +87,28 @@
         <div class="carousel-item active">
           <img src="img/image1.jpg" class="d-block w-100" alt="Destination 1" />
           <div class="carousel-caption">
-            <h1>Zaronite u Nezaboravna Putovanja</h1>
-            <p>
-              Dobrodošli na našu platformu putovanja! Inspirišemo avanture širom
-              sveta. Vaša sledeća destinacija je samo klik dalje.
-            </p>
-            <p><a href="#" class="btn btn-warning mt3">Saznajte više</a></p>
+            <h1>Dive Into Unforgettable Journeys</h1>
+
+            <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/france.jpg" class="d-block w-100" alt="Louvre" />
+          <img src="img/image1.jpg" class="d-block w-100" alt="Louvre" />
           <div class="carousel-caption">
-            <h1>Zaronite u Nezaboravna Putovanja</h1>
-            <p>
-              Dobrodošli na našu platformu putovanja! Inspirišemo avanture širom
-              sveta. Vaša sledeća destinacija je samo klik dalje.
-            </p>
-            <p><a href="#" class="btn btn-warning mt3">Saznajte više</a></p>
+            <h1>Dive Into Unforgettable Journeys</h1>
+
+            <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
           </div>
         </div>
         <div class="carousel-item">
           <img
-            src="img/temple.jpg"
+            src="img/image1.jpg"
             class="d-block w-100"
             alt="Japanese temple"
           />
           <div class="carousel-caption">
-            <h1>Zaronite u Nezaboravna Putovanja</h1>
-            <p>
-              Dobrodošli na našu platformu putovanja! Inspirišemo avanture širom
-              sveta. Vaša sledeća destinacija je samo klik dalje.
-            </p>
-            <p><a href="#" class="btn btn-warning mt3">Saznajte više</a></p>
+            <h1>Dive Into Unforgettable Journeys</h1>
+            <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
           </div>
         </div>
       </div>
@@ -136,7 +131,68 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <!--Newsletter-->
+    <section class="secondary text-light p-4">
+      <div class="container">
+        <div class="d-md-flex justify-content-between align-items-center">
+          <h4 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h4>
 
+          <div class="input-group news-input">
+            <input type="text" class="form-control" placeholder="Enter Email" />
+            <div class="input-group-append">
+              <button class="btn btn-dark btn-lg" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Footer-->
+    <footer class="p-4 bg-dark text-white text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a href="#" class="social-icons"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="social-icons"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="social-icons"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="social-icons"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="social-icons"
+                  ><i class="fab fa-youtube"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="social-icons"
+                  ><i class="fab fa-pinterest"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-center">
+            <hr />
+            <p class="mb-0">Copyright &copy; 2024 JourneyJoy</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
