--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/image1.jpg" class="d-block w-100" alt="Louvre" />
+          <img src="img/france.jpg" class="d-block w-100" alt="Louvre" />
           <div class="carousel-caption">
-            <h1>Dive Into Unforgettable Journeys</h1>
+            <h1>Embark on Epic Adventures</h1>
 
             <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
           </div>
         </div>
         <div class="carousel-item">
           <img
-            src="img/image1.jpg"
+            src="img/temple.jpg"
             class="d-block w-100"
             alt="Japanese temple"
           />
           <div class="carousel-caption">
-            <h1>Dive Into Unforgettable Journeys</h1>
+            <h1>Explore Hidden Gems Around the Globe</h1>
             <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
           </div>
         </div>
