--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/4cd4ec0763.js"
-      crossorigin="anonymous"
-    ></script>
+
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <title>JourneyJoy</title>
   </head>
@@ -37,16 +34,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Destinations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Contact</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">Author</a>
@@ -131,6 +128,48 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <!--Boxes-->
+    <section class="p-4">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md">
+            <div class="card bg-dark text-light mb-2">
+              <div class="h1 my-2">
+                <i class="fa-solid fa-earth-europe"></i>
+              </div>
+              <h5 class="card-title mb-3">Best adventures around the world</h5>
+              <p class="card-text mb-3">
+                <a href="#" class="btn btn-secondary">Read more</a>
+              </p>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card secondary text-light mb-2">
+              <div class="h1 my-2">
+                <i class="fa-solid fa-users"></i>
+              </div>
+              <h5 class="card-title mb-3">Become a member of our team</h5>
+              <p class="card-text mb-3">
+                <a href="#" class="btn btn-dark">Contact us</a>
+              </p>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="h1 my-2">
+                <i class="fa-regular fa-paste"></i>
+              </div>
+              <h5 class="card-title mb-3">
+                Start planning your next adventure
+              </h5>
+              <p class="card-text mb-3">
+                <a href="#" class="btn btn-secondary">Read more</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--Newsletter-->
     <section class="secondary text-light p-4">
       <div class="container">
@@ -196,6 +235,10 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/4cd4ec0763.js"
       crossorigin="anonymous"
     ></script>
   </body>
