--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>JourneyJoy</title>
   </head>
   <body>
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><span class="logo">Journey</span>Joy</a
         >
         <button
@@ -37,16 +36,18 @@
               <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">About</a>
+              <a class="nav-link" href="pages/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Destinations</a>
+              <a class="nav-link" href="pages/destinations.html"
+                >Destinations</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Contact</a>
+              <a class="nav-link" href="pages/contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Author</a>
+              <a class="nav-link" href="pages/author.html">Author</a>
             </li>
           </ul>
         </div>
@@ -82,7 +83,11 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/image1.jpg" class="d-block w-100" alt="Destination 1" />
+          <img
+            src="assets/img/image1.jpg"
+            class="d-block w-100"
+            alt="Destination 1"
+          />
           <div class="carousel-caption">
             <h1>Dive Into Unforgettable Journeys</h1>
 
@@ -90,7 +95,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/france.jpg" class="d-block w-100" alt="Louvre" />
+          <img src="assets/img/france.jpg" class="d-block w-100" alt="Louvre" />
           <div class="carousel-caption">
             <h1>Embark on Epic Adventures</h1>
 
@@ -99,7 +104,7 @@
         </div>
         <div class="carousel-item">
           <img
-            src="img/temple.jpg"
+            src="assets/img/temple.jpg"
             class="d-block w-100"
             alt="Japanese temple"
           />
@@ -166,6 +171,39 @@
                 <a href="#" class="btn btn-secondary">Read more</a>
               </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--About section-->
+    <section class="p-5 primary">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg">
+            <img
+              src="assets/img/travel1.jpg"
+              class="img-fluid"
+              alt="Travel image"
+            />
+          </div>
+          <div class="col-lg p-5">
+            <h2>About Us</h2>
+            <p class="lead">
+              Welcome to JourneyJoy, where we're passionate about helping you
+              embark on unforgettable adventures around the world.
+            </p>
+            <p>
+              At JourneyJoy we understand that planning a thrilling and
+              adventurous journey can be daunting. That's why we're here to make
+              the process seamless and enjoyable for you. Our mission is simple:
+              to assist our customers in finding the perfect adventurous
+              destinations, help them organize every aspect of their trip, and
+              provide fascinating information about destinations across Europe,
+              Asia, and beyond.
+            </p>
+            <a href="#" class="btn btn-dark mt-3"
+              ><i class="fa-solid fa-chevron-right"></i> Read more</a
+            >
           </div>
         </div>
       </div>
