--- a/pages/about.html
+++ b/pages/about.html
@@ -99,9 +99,7 @@
         wonders of the world.
       </p>
     </header>
-    <div class="col-9 mx-auto">
-      <hr class="mt-2" />
-    </div>
+    <hr class="col-9 mx-auto" />
     <section class="p-5">
       <div class="container">
         <div class="row align-items-center justify-content-between">
@@ -132,7 +130,9 @@
         </div>
       </div>
       <div class="container">
-        <div class="row align-items-center justify-content-between">
+        <div
+          class="row align-items-center justify-content-between flex-column-reverse flex-lg-row"
+        >
           <div class="col-lg">
             <img
               src="../assets/img/travel3.jpg"
