--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -92,6 +92,16 @@
         </div>
       </div>
     </nav>
+    <!--Header-->
+    <header class="py-5 text-center col-9 col-lg-7 mx-auto">
+      <h1 class="display-5 fw-bold mb-3">Our destinations</h1>
+      <p class="text-muted lead mb-0">
+        Explore our recommended destinations and get in touch with us to help
+        you organize your next unforgettable journey.
+      </p>
+    </header>
+    <hr class="col-9 mx-auto" />
+
     <!--Newsletter-->
     <section class="secondary text-light p-4">
       <div class="container">
