add content and footer  to other pages

--- a/pages/author.html
+++ b/pages/author.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="JourneyJoy, travel, destinations, adventure, vacations, tourism, explore, journey, wanderlust"
+    />
+    <meta
+      name="description"
+      content="Explore the world of travel with our guides and tips. Find inspiration, discover destinations, and plan unforgettable adventures."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +31,7 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Success</h5>
@@ -90,6 +98,11 @@
         </div>
       </div>
     </nav>
+    <!--Header-->
+    <header class="py-5 text-center col-9 col-lg-7 mx-auto">
+      <h1 class="display-5 fw-bold mb-3">About our author</h1>
+      <hr class="col-9 mx-auto" />
+    </header>
     <!--Newsletter-->
     <section class="secondary text-light p-4">
       <div class="container">
@@ -97,7 +110,11 @@
           <h4 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h4>
 
           <div class="input-group news-input">
-            <input type="text" class="form-control" placeholder="Enter Email" />
+            <input
+              type="text"
+              class="form-control mb-3"
+              placeholder="Enter Email"
+            />
             <div class="input-group-append">
               <button
                 class="btn btn-dark btn-lg"
@@ -112,11 +129,78 @@
         </div>
       </div>
     </section>
+    <!--Footer-->
+    <footer class="p-4 bg-dark text-white text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a
+                  href="https://www.facebook.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.twitter.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.instagram.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.linkedin.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.youtube.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-youtube"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.pinterest.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-pinterest"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-center">
+            <hr />
+            <p class="mb-0">Copyright &copy; 2024 JourneyJoy</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <!--Fa icons-->
     <script
       src="https://kit.fontawesome.com/4cd4ec0763.js"
       crossorigin="anonymous"
