--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="JourneyJoy, travel, destinations, adventure, vacations, tourism, explore, journey, wanderlust"
+    />
+    <meta
+      name="description"
+      content="Explore the world of travel with our guides and tips. Find inspiration, discover destinations, and plan unforgettable adventures."
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +32,7 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Success</h5>
@@ -101,7 +110,131 @@
       </p>
     </header>
     <hr class="col-9 mx-auto" />
-
+    <!--Main-->
+    <section class="p-4">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg p-4">
+            <h4>The Swiss Alps, Switzerland</h4>
+            <p class="lead">
+              The Swiss Alps are a haven for adventure seekers, offering a
+              plethora of exhilarating activities against the backdrop of
+              stunning alpine scenery. Whether it's skiing and snowboarding in
+              winter or hiking and mountain biking in summer, the Swiss Alps
+              provide endless opportunities for adrenaline-fueled experiences.
+              Visitors can also try paragliding, rock climbing, or even glacier
+              trekking for a truly unforgettable adventure in one of Europe's
+              most iconic mountain ranges.
+            </p>
+          </div>
+          <div class="col-lg">
+            <img
+              src="../assets/img/alps.jpg"
+              class="img-fluid rounded rounded"
+              alt="Travel image"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div
+          class="row align-items-center justify-content-between flex-column-reverse flex-lg-row"
+        >
+          <div class="col-lg">
+            <img
+              src="../assets/img/santorini.jpg"
+              class="img-fluid rounded"
+              alt="Travel image"
+            />
+          </div>
+          <div class="col-lg p-4">
+            <h4>Santorini, Greece</h4>
+            <p class="lead">
+              While known for its romantic sunsets and picturesque villages,
+              Santorini also offers exciting adventures for those seeking an
+              adrenaline rush. From cliff diving into the crystal-clear Aegean
+              Sea to exploring hidden sea caves and volcanic landscapes,
+              Santorini provides ample opportunities for thrill-seekers.
+              Visitors can also embark on sailing trips around the island,
+              snorkel in vibrant underwater ecosystems, or even take a
+              helicopter tour for a bird's-eye view of this stunning Greek
+              island paradise.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg p-4">
+            <h4>Mount Everest Base Camp, Nepal</h4>
+            <p class="lead">
+              Trekking to Mount Everest Base Camp is an iconic adventure nestled
+              in the Himalayas of Nepal. The journey provides awe-inspiring
+              vistas of the world's highest peaks, including Mount Everest.
+              Traversing through remote mountain villages, lush forests, and
+              challenging terrain, trekkers immerse themselves in the raw beauty
+              of the Himalayas, culminating in a once-in-a-lifetime experience
+              at the base camp of the tallest mountain on Earth.
+            </p>
+          </div>
+          <div class="col-lg">
+            <img
+              src="../assets/img/everest.jpg"
+              class="img-fluid rounded"
+              alt="Travel image"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div
+          class="row align-items-center justify-content-between flex-column-reverse flex-lg-row"
+        >
+          <div class="col-lg">
+            <img
+              src="../assets/img/temple.jpg"
+              class="img-fluid rounded"
+              alt="Travel image"
+            />
+          </div>
+          <div class="col-lg p-4">
+            <h4>Kiyomizu-dera Temple, Kyoto, Japan</h4>
+            <p class="lead">
+              Kiyomizu-dera is a historic temple in Kyoto, Japan, known for its
+              breathtaking architecture and panoramic views. Dating back to the
+              8th century, it's a UNESCO World Heritage Site and a symbol of
+              Japan's rich cultural heritage. Visitors can explore its wooden
+              structures, serene gardens, and drink from the Otowa Waterfall for
+              blessings.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg p-4">
+            <h4>Machu Picchu, Peru</h4>
+            <p class="lead">
+              Machu Picchu, perched high in the Andes of Peru, is an ancient
+              Incan citadel shrouded in mystery. This UNESCO World Heritage Site
+              boasts remarkable architecture, intricate terraces, and stunning
+              mountain vistas. Visitors can trek the Inca Trail, explore the
+              Sacred Valley, or take a scenic train to reach this iconic
+              destination. Discover the rich history and culture of the Inca
+              civilization through its captivating ruins, making it an
+              unforgettable adventure for all.
+            </p>
+          </div>
+          <div class="col-lg">
+            <img
+              src="../assets/img/machu-picchu.jpg"
+              class="img-fluid rounded"
+              alt="Travel image"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
     <!--Newsletter-->
     <section class="secondary text-light p-4">
       <div class="container">
@@ -109,7 +242,11 @@
           <h4 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h4>
 
           <div class="input-group news-input">
-            <input type="text" class="form-control" placeholder="Enter Email" />
+            <input
+              type="text"
+              class="form-control mb-3"
+              placeholder="Enter Email"
+            />
             <div class="input-group-append">
               <button
                 class="btn btn-dark btn-lg"
@@ -124,11 +261,78 @@
         </div>
       </div>
     </section>
+    <!--Footer-->
+    <footer class="p-4 bg-dark text-white text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a
+                  href="https://www.facebook.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.twitter.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.instagram.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.linkedin.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.youtube.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-youtube"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.pinterest.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-pinterest"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-center">
+            <hr />
+            <p class="mb-0">Copyright &copy; 2024 JourneyJoy</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <!--Fa icons-->
     <script
       src="https://kit.fontawesome.com/4cd4ec0763.js"
       crossorigin="anonymous"
