--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="JourneyJoy, travel, destinations, adventure, vacations, tourism, explore, journey, wanderlust"
+    />
+    <meta
+      name="description"
+      content="Explore the world of travel with our guides and tips. Find inspiration, discover destinations, and plan unforgettable adventures."
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +32,7 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Success</h5>
@@ -215,13 +224,13 @@
       </div>
     </section>
     <!--About section-->
-    <section class="p-5 primary">
+    <section class="p-4 primary">
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-lg">
             <img
               src="assets/img/travel1.jpg"
-              class="img-fluid"
+              class="img-fluid rounded rounded"
               alt="Travel image"
             />
           </div>
@@ -248,7 +257,7 @@
       </div>
     </section>
     <!--Our Team-->
-    <section class="p-5 color2">
+    <section class="p-4 color2">
       <div class="container">
         <h2 class="text-center text-dark">Our Team</h2>
         <p class="lead text-center text-dark mb-3">
@@ -480,7 +489,11 @@
           <h4 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h4>
 
           <div class="input-group news-input">
-            <input type="text" class="form-control" placeholder="Enter Email" />
+            <input
+              type="text"
+              class="form-control mb-3"
+              placeholder="Enter Email"
+            />
             <div class="input-group-append">
               <button
                 class="btn btn-dark btn-lg"
@@ -502,32 +515,50 @@
           <div class="col">
             <ul class="list-inline text-center">
               <li class="list-inline-item">
-                <a href="#" class="social-icons"
-                  ><i class="fab fa-facebook-f"></i
+                <a
+                  href="https://www.facebook.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-facebook"></i
                 ></a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="social-icons"
+                <a
+                  href="https://www.twitter.com/"
+                  class="social-icons"
+                  target="_blank"
                   ><i class="fab fa-twitter"></i
                 ></a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="social-icons"
+                <a
+                  href="https://www.instagram.com/"
+                  class="social-icons"
+                  target="_blank"
                   ><i class="fab fa-instagram"></i
                 ></a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="social-icons"
+                <a
+                  href="https://www.linkedin.com/"
+                  class="social-icons"
+                  target="_blank"
                   ><i class="fab fa-linkedin"></i
                 ></a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="social-icons"
+                <a
+                  href="https://www.youtube.com/"
+                  class="social-icons"
+                  target="_blank"
                   ><i class="fab fa-youtube"></i
                 ></a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="social-icons"
+                <a
+                  href="https://www.pinterest.com/"
+                  class="social-icons"
+                  target="_blank"
                   ><i class="fab fa-pinterest"></i
                 ></a>
               </li>
@@ -547,6 +578,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
+    <!--Fa icons-->
     <script
       src="https://kit.fontawesome.com/4cd4ec0763.js"
       crossorigin="anonymous"
