--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="JourneyJoy, travel, destinations, adventure, vacations, tourism, explore, journey, wanderlust"
+    />
+    <meta
+      name="description"
+      content="Explore the world of travel with our guides and tips. Find inspiration, discover destinations, and plan unforgettable adventures."
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +32,7 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Success</h5>
@@ -92,7 +101,7 @@
     </nav>
     <!--Header-->
     <header class="py-5 text-center col-9 col-lg-7 mx-auto">
-      <h1 class="display-5 fw-bold mb-3">About us</h1>
+      <h1 class="display-5 fw-bold mb-3">Why choose us</h1>
       <p class="text-muted lead mb-0">
         Join us on a journey of discovery, adventure, and unforgettable
         experiences. Let JourneyJoy be your trusted companion in exploring the
@@ -100,7 +109,8 @@
       </p>
     </header>
     <hr class="col-9 mx-auto" />
-    <section class="p-5">
+    <!--Main-->
+    <section class="p-4">
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-lg p-4">
@@ -123,7 +133,7 @@
           <div class="col-lg">
             <img
               src="../assets/img/travel2.jpg"
-              class="img-fluid"
+              class="img-fluid rounded"
               alt="Travel image"
             />
           </div>
@@ -136,7 +146,7 @@
           <div class="col-lg">
             <img
               src="../assets/img/travel3.jpg"
-              class="img-fluid"
+              class="img-fluid rounded"
               alt="Travel image"
             />
           </div>
@@ -178,7 +188,7 @@
           <div class="col-lg">
             <img
               src="../assets/img/travel4.jpg"
-              class="img-fluid"
+              class="img-fluid rounded"
               alt="Travel image"
             />
           </div>
@@ -186,9 +196,11 @@
       </div>
     </section>
     <!--Question Accordion-->
-    <section class="p-5 primary">
+    <section class="p-4 primary">
       <div class="container">
-        <h2 class="text-center mb-4 secondary-t">Frequently Asked Questions</h2>
+        <h2 class="text-center mb-4 secondary-t fw-bold">
+          Frequently Asked Questions
+        </h2>
         <div class="accordion accordion-flush" id="questions">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
@@ -344,7 +356,11 @@
           <h4 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h4>
 
           <div class="input-group news-input">
-            <input type="text" class="form-control" placeholder="Enter Email" />
+            <input
+              type="text"
+              class="form-control mb-3"
+              placeholder="Enter Email"
+            />
             <div class="input-group-append">
               <button
                 class="btn btn-dark btn-lg"
@@ -359,6 +375,71 @@
         </div>
       </div>
     </section>
+    <!--Footer-->
+    <footer class="p-4 bg-dark text-white text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a
+                  href="https://www.facebook.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.twitter.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.instagram.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.linkedin.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.youtube.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-youtube"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.pinterest.com/"
+                  class="social-icons"
+                  target="_blank"
+                  ><i class="fab fa-pinterest"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-center">
+            <hr />
+            <p class="mb-0">Copyright &copy; 2024 JourneyJoy</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!--Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
