--- a/pages/contact.html
+++ b/pages/contact.html
@@ -109,26 +109,26 @@
       </div>
     </nav>
     <!--Main-->
-    <section class="p-5">
+    <section class="p-4">
       <div class="container">
         <div class="row g-4">
-          <div class="col-md p-4">
-            <h2 class="text-center mb-5">Contact info</h2>
+          <div class="col-md">
+            <h2 class="h1 text-center mb-5 fw-bold">Contact info</h2>
             <ul class="list-group list-group-flush lead">
               <li class="list-group-item">
-                <span class="fw-bold">Email address:</span>
+                <span class="fw-bold secondary-t">Email address:</span>
                 contact@journeyjoy.com
               </li>
               <li class="list-group-item">
-                <span class="fw-bold">Phone number:</span>
+                <span class="fw-bold secondary-t">Phone number:</span>
                 +1 (555) 123-4567
               </li>
               <li class="list-group-item">
-                <span class="fw-bold">Physical address: </span>
+                <span class="fw-bold secondary-t">Physical address: </span>
                 123 Travel Street, Cityville, Countryland
               </li>
               <li class="list-group-item">
-                <span class="fw-bold">Working hours:</span>
+                <span class="fw-bold secondary-t">Working hours:</span>
                 Monday - Friday: 9:00 AM - 5:00 PM
               </li>
             </ul>
@@ -187,11 +187,7 @@
           <h4 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h4>
 
           <div class="input-group news-input">
-            <input
-              type="text"
-              class="form-control mb-3"
-              placeholder="Enter Email"
-            />
+            <input type="text" class="form-control" placeholder="Enter Email" />
             <div class="input-group-append">
               <button
                 class="btn btn-dark btn-lg"
