--- a/pages/author.html
+++ b/pages/author.html
@@ -110,11 +110,7 @@
           <h4 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h4>
 
           <div class="input-group news-input">
-            <input
-              type="text"
-              class="form-control mb-3"
-              placeholder="Enter Email"
-            />
+            <input type="text" class="form-control" placeholder="Enter Email" />
             <div class="input-group-append">
               <button
                 class="btn btn-dark btn-lg"
