--- a/pages/author.html
+++ b/pages/author.html
@@ -99,10 +99,43 @@
       </div>
     </nav>
     <!--Header-->
-    <header class="py-5 text-center col-9 col-lg-7 mx-auto">
+    <header class="py-4 text-center col-9 col-lg-7 mx-auto">
       <h1 class="display-5 fw-bold mb-3">About our author</h1>
       <hr class="col-9 mx-auto" />
     </header>
+    <!--Main-->
+    <section class="about-author p-4 pb-5 pt-0">
+      <div class="container">
+        <div class="row align-items-center justify-content-around">
+          <!-- Image -->
+          <div class="col-md-5">
+            <img
+              src="../assets/img/author.jpg"
+              class="img-fluid rounded"
+              alt="Author"
+            />
+          </div>
+          <!-- Text -->
+          <div class="col-md-6">
+            <ul class="list-group list-group-flush text-center">
+              <li class="list-group-item fs-3">
+                <span class="fw-bold secondary-t">Ime:</span>
+                Isidora
+              </li>
+              <li class="list-group-item fs-3">
+                <span class="fw-bold secondary-t">Prezime:</span>
+                Vučković
+              </li>
+              <li class="list-group-item fs-3">
+                <span class="fw-bold secondary-t">Broj indeksa: </span>
+                4/23
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!--Newsletter-->
     <section class="secondary text-light p-4">
       <div class="container">
