add links to a tags

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,12 @@
       name="description"
       content="Explore the world of travel with our guides and tips. Find inspiration, discover destinations, and plan unforgettable adventures."
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Handlee&family=Kurale&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -63,7 +68,7 @@
     </div>
     <!--Header-->
     <header class="py-5 text-center col-9 col-lg-7 mx-auto">
-      <h1 class="display-5 fw-bold mb-3">Where to find us</h1>
+      <h1 class="display-5 fw-bold mb-3 title">Where to find us</h1>
       <p class="text-muted lead mb-0">
         Craft your perfect journey or become a valued member of our team,
         unlocking exclusive travel deals and unforgettable experiences with us.
