--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -11,7 +11,12 @@
       name="description"
       content="Explore the world of travel with our guides and tips. Find inspiration, discover destinations, and plan unforgettable adventures."
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Handlee&family=Kurale&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -103,7 +108,7 @@
     </nav>
     <!--Header-->
     <header class="py-5 text-center col-9 col-lg-7 mx-auto">
-      <h1 class="display-5 fw-bold mb-3">Our destinations</h1>
+      <h1 class="display-5 fw-bold mb-3 title">Our destinations</h1>
       <p class="text-muted lead mb-0">
         Explore our recommended destinations and get in touch with us to help
         you organize your next unforgettable journey.
@@ -131,7 +136,7 @@
             <img
               src="../assets/img/alps.jpg"
               class="img-fluid rounded rounded"
-              alt="Travel image"
+              alt="The Swiss Alps, Switzerland"
             />
           </div>
         </div>
@@ -144,7 +149,7 @@
             <img
               src="../assets/img/santorini.jpg"
               class="img-fluid rounded"
-              alt="Travel image"
+              alt="Santorini, Greece"
             />
           </div>
           <div class="col-lg p-4">
@@ -181,7 +186,7 @@
             <img
               src="../assets/img/everest.jpg"
               class="img-fluid rounded"
-              alt="Travel image"
+              alt="Mount Everest Base Camp, Nepal"
             />
           </div>
         </div>
@@ -194,7 +199,7 @@
             <img
               src="../assets/img/temple.jpg"
               class="img-fluid rounded"
-              alt="Travel image"
+              alt="Kiyomizu-dera Temple, Kyoto, Japan"
             />
           </div>
           <div class="col-lg p-4">
@@ -229,7 +234,7 @@
             <img
               src="../assets/img/machu-picchu.jpg"
               class="img-fluid rounded"
-              alt="Travel image"
+              alt="Machu Picchu, Peru"
             />
           </div>
         </div>
