--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
       name="description"
       content="Explore the world of travel with our guides and tips. Find inspiration, discover destinations, and plan unforgettable adventures."
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Handlee&family=Kurale&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -131,23 +136,27 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img
-            src="assets/img/image1.jpg"
-            class="d-block w-100"
-            alt="Destination 1"
-          />
+          <img src="assets/img/image1.jpg" class="d-block w-100" alt="Road" />
           <div class="carousel-caption">
-            <h1 class="fw-bold">Dive Into Unforgettable Journeys</h1>
+            <h1 class="fw-bold title">Dive Into Unforgettable Journeys</h1>
 
-            <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
+            <p>
+              <a href="pages/about.html" class="btn btn-warning mt3"
+                >Learn more</a
+              >
+            </p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="assets/img/france.jpg" class="d-block w-100" alt="Louvre" />
           <div class="carousel-caption">
-            <h1 class="fw-bold">Embark on Epic Adventures</h1>
+            <h1 class="fw-bold title">Embark on Epic Adventures</h1>
 
-            <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
+            <p>
+              <a href="pages/about.html" class="btn btn-warning mt3"
+                >Learn more</a
+              >
+            </p>
           </div>
         </div>
         <div class="carousel-item">
@@ -157,8 +166,12 @@
             alt="Japanese temple"
           />
           <div class="carousel-caption">
-            <h1 class="fw-bold">Explore Hidden Gems Around the Globe</h1>
-            <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
+            <h1 class="fw-bold title">Explore Hidden Gems Around the Globe</h1>
+            <p>
+              <a href="pages/about.html" class="btn btn-warning mt3"
+                >Learn more</a
+              >
+            </p>
           </div>
         </div>
       </div>
@@ -192,7 +205,9 @@
               </div>
               <h5 class="card-title mb-3">Best adventures around the world</h5>
               <p class="card-text mb-3">
-                <a href="#" class="btn btn-secondary">Read more</a>
+                <a href="pages/about.html" class="btn btn-secondary"
+                  >Read more</a
+                >
               </p>
             </div>
           </div>
@@ -203,7 +218,7 @@
               </div>
               <h5 class="card-title mb-3">Become a member of our team</h5>
               <p class="card-text mb-3">
-                <a href="#" class="btn btn-dark">Contact us</a>
+                <a href="pages/contact.html" class="btn btn-dark">Contact us</a>
               </p>
             </div>
           </div>
@@ -216,7 +231,9 @@
                 Start planning your next adventure
               </h5>
               <p class="card-text mb-3">
-                <a href="#" class="btn btn-secondary">Read more</a>
+                <a href="pages/destinations.html" class="btn btn-secondary"
+                  >Read more</a
+                >
               </p>
             </div>
           </div>
@@ -249,7 +266,7 @@
               provide fascinating information about destinations across Europe,
               Asia, and beyond.
             </p>
-            <a href="#" class="btn btn-dark mt-3"
+            <a href="pages/about.html" class="btn btn-dark mt-3"
               ><i class="fa-solid fa-chevron-right"></i> Read more</a
             >
           </div>
@@ -281,7 +298,7 @@
                             <img
                               src="https://randomuser.me/api/portraits/men/18.jpg"
                               class="rounded-circle mb-3"
-                              alt=""
+                              alt="Noah Johnson"
                             />
                             <h4 class="card-title mb-3">Noah Johnson</h4>
                             <p class="card-text">
@@ -289,16 +306,28 @@
                               journeys filled with excitement and enriching
                               insights into local culture.
                             </p>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.twitter.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-twitter"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.facebook.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-facebook"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.linkedin.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-linkedin"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.instagram.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-instagram"></i
                             ></a>
                           </div>
@@ -310,7 +339,7 @@
                             <img
                               src="https://randomuser.me/api/portraits/women/8.jpg"
                               class="rounded-circle mb-3"
-                              alt=""
+                              alt="Emma Smith"
                             />
                             <h4 class="card-title mb-3">Emma Smith</h4>
                             <p class="card-text">
@@ -318,16 +347,28 @@
                               itineraries ensuring a seamless and personalized
                               journey for you.
                             </p>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.twitter.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-twitter"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.facebook.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-facebook"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.linkedin.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-linkedin"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.instagram.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-instagram"></i
                             ></a>
                           </div>
@@ -339,7 +380,7 @@
                             <img
                               src="https://randomuser.me/api/portraits/men/1.jpg"
                               class="rounded-circle mb-3"
-                              alt=""
+                              alt="Alexander Chang"
                             />
                             <h4 class="card-title mb-3">Alexander Chang</h4>
                             <p class="card-text">
@@ -347,16 +388,28 @@
                               off-the-beaten-path experiences to make your
                               journey extraordinary.
                             </p>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.twitter.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-twitter"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.facebook.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-facebook"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.linkedin.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-linkedin"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.instagram.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-instagram"></i
                             ></a>
                           </div>
@@ -372,7 +425,7 @@
                             <img
                               src="https://randomuser.me/api/portraits/women/17.jpg"
                               class="rounded-circle mb-3"
-                              alt=""
+                              alt="Sophia Patel"
                             />
                             <h4 class="card-title mb-3">Sophia Patel</h4>
                             <p class="card-text">
@@ -380,16 +433,28 @@
                               experience is exceptional, addressing any concerns
                               with warmth and attention.
                             </p>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.twitter.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-twitter"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.facebook.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-facebook"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.linkedin.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-linkedin"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.instagram.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-instagram"></i
                             ></a>
                           </div>
@@ -401,7 +466,7 @@
                             <img
                               src="https://randomuser.me/api/portraits/men/20.jpg"
                               class="rounded-circle mb-3"
-                              alt=""
+                              alt="Liam Garcia"
                             />
                             <h4 class="card-title mb-3">Liam Garcia</h4>
                             <p class="card-text">
@@ -409,16 +474,28 @@
                               destinations to life with captivating storytelling
                               and stunning visuals.
                             </p>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.twitter.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-twitter"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.facebook.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-facebook"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.linkedin.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-linkedin"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.instagram.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-instagram"></i
                             ></a>
                           </div>
@@ -430,7 +507,7 @@
                             <img
                               src="https://randomuser.me/api/portraits/women/23.jpg"
                               class="rounded-circle mb-3"
-                              alt=""
+                              alt="Isabella Nguyen"
                             />
                             <h4 class="card-title mb-3">Isabella Nguyen</h4>
                             <p class="card-text">
@@ -438,16 +515,28 @@
                               aspect of your journey runs smoothly, handling
                               details behind the scenes
                             </p>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.twitter.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-twitter"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.facebook.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-facebook"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.linkedin.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-linkedin"></i
                             ></a>
-                            <a href="#" class="social-icons-team"
+                            <a
+                              href="https://www.instagram.com"
+                              class="social-icons-team"
+                              target="_blank"
                               ><i class="fab fa-instagram"></i
                             ></a>
                           </div>
