--- a/pages/about.html
+++ b/pages/about.html
@@ -11,6 +11,12 @@
       name="description"
       content="Explore the world of travel with our guides and tips. Find inspiration, discover destinations, and plan unforgettable adventures."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Handlee&family=Kurale&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -101,7 +107,7 @@
     </nav>
     <!--Header-->
     <header class="py-5 text-center col-9 col-lg-7 mx-auto">
-      <h1 class="display-5 fw-bold mb-3">Why choose us</h1>
+      <h1 class="display-5 fw-bold mb-3 title">Why choose us</h1>
       <p class="text-muted lead mb-0">
         Join us on a journey of discovery, adventure, and unforgettable
         experiences. Let JourneyJoy be your trusted companion in exploring the
@@ -134,7 +140,7 @@
             <img
               src="../assets/img/travel2.jpg"
               class="img-fluid rounded"
-              alt="Travel image"
+              alt="Women traveling"
             />
           </div>
         </div>
@@ -147,7 +153,7 @@
             <img
               src="../assets/img/travel3.jpg"
               class="img-fluid rounded"
-              alt="Travel image"
+              alt="Women traveling"
             />
           </div>
           <div class="col-lg p-4">
@@ -189,7 +195,7 @@
             <img
               src="../assets/img/travel4.jpg"
               class="img-fluid rounded"
-              alt="Travel image"
+              alt="Teens traveling"
             />
           </div>
         </div>
