--- a/pages/author.html
+++ b/pages/author.html
@@ -11,6 +11,12 @@
       name="description"
       content="Explore the world of travel with our guides and tips. Find inspiration, discover destinations, and plan unforgettable adventures."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Handlee&family=Kurale&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -99,8 +105,8 @@
       </div>
     </nav>
     <!--Header-->
-    <header class="py-4 text-center col-9 col-lg-7 mx-auto">
-      <h1 class="display-5 fw-bold mb-3">About our author</h1>
+    <header class="pt-5 pb-3 text-center col-9 col-lg-7 mx-auto">
+      <h1 class="display-5 fw-bold mb-3 title">About our author</h1>
       <hr class="col-9 mx-auto" />
     </header>
     <!--Main-->
@@ -135,7 +141,6 @@
         </div>
       </div>
     </section>
-
     <!--Newsletter-->
     <section class="secondary text-light p-4">
       <div class="container">
