--- a/index.html
+++ b/index.html
@@ -641,10 +641,10 @@
               </li>
               <li class="list-inline-item">
                 <a
-                  href="https://www.pinterest.com/"
+                  href="assets/xml/sitemap.xml"
                   class="social-icons"
                   target="_blank"
-                  ><i class="fab fa-pinterest"></i
+                  ><i class="fa-solid fa-sitemap"></i
                 ></a>
               </li>
             </ul>
