--- a/pages/author.html
+++ b/pages/author.html
@@ -106,7 +106,7 @@
     </nav>
     <!--Header-->
     <header class="pt-5 pb-3 text-center col-9 col-lg-7 mx-auto">
-      <h1 class="display-5 fw-bold mb-3 title">About our author</h1>
+      <h1 class="display-5 fw-bold mb-3 title secondary-t">About our author</h1>
       <hr class="col-9 mx-auto" />
     </header>
     <!--Main-->
@@ -211,10 +211,10 @@
               </li>
               <li class="list-inline-item">
                 <a
-                  href="https://www.pinterest.com/"
+                  href="assets/xml/sitemap.xml"
                   class="social-icons"
                   target="_blank"
-                  ><i class="fab fa-pinterest"></i
+                  ><i class="fa-solid fa-sitemap"></i
                 ></a>
               </li>
             </ul>
