add sitemap link to other pages

--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -310,7 +310,7 @@
               </li>
               <li class="list-inline-item">
                 <a
-                  href="assets/xml/sitemap.xml"
+                  href="../assets/xml/sitemap.xml"
                   class="social-icons"
                   target="_blank"
                   ><i class="fa-solid fa-sitemap"></i
